--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,2 +1,6 @@
 <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
+
+<style>
+  * { font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', -apple-system }
+</style>
